--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 
     <link rel="stylesheet" href="./files/style.css" type="text/css">
 
-    <h1 contenteditable="true">Kirtan Patel</h1>
-    <h2>Hello, and welcome to this webpage thingy.<br> awesomesauce.</h2>
-    <p>Put stuff here.</p>
+    <h1>Kirtan Patel</h1>
+    <h2></h2>
     <pre>
-  <p><a href="http://blog.thekirtan.com">blog</a> <a href="http://twitter.com/kirtan">twttr</a> <a href="http://foursquare.com/kirtan">dodgeball</a> <a href="http://instagrid.me/kirtan">instagram</a> <a href="http://stellar.io/kirtan">stellar</a> <a href="http://facebook.com/kirtan">thefacebook</a> <a href="http://pinterest.com/kirtan">pinterest</a></p>
+  <p><a href="http://twitter.com/kirtan" target="_blank">twttr</a> <a href="http://foursquare.com/kirtan" target="_blank">dodgeball</a> <a href="http://instagrid.me/kirtan" target="_blank">instagram</a> <a href="http://quora.com/Kirtan-Patel" target="_blank">quora</a> <a href="http://findings.com/kirtan" target="_blank">fndgs</a> <a href="http://pinterest.com/kirtan" target="_blank">pinterest</a> <a href="http://open.spotify.com/user/thekirtan" target="_blank">spotify</a> <a href="http://facebook.com/kirtan" target="_blank">thefacebook</a>
+  
+  <a href="mailto:me@thekirtan.com">email</a> <span>&middot;</span> <a href="http://www.linkedin.com/in/thekirtan" target="_blank">linkedin</a> <span>&middot;</span> <a href="http://angel.co/kirtan">angellist</a> <span>&middot;</span> <a href="http://dl.dropbox.com/u/460310/Kirtan_Patel.pdf">résumé</a></p>
 </pre>
 
-<p><a href="http://thekirtan.com">Homes</a> <span>&middot;</span> <a href="http://twitter.com/kirtan">@kirtan</a></p>
+<p><a href="http://thekirtan.com">Home</a> <span>&middot;</span> <a href="http://twitter.com/kirtan" target="_blank">@kirtan</a></p>
 
 </body><link rel="stylesheet" type="text/css" href="data:text/css,"></html>
