--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <link rel="stylesheet" href="./files/style.css" type="text/css">
 
-    <h1>Kirtan Patel</h1>
+    <h1>kirtan patel</h1>
     <h2></h2>
     <pre>
   <p><a href="http://twitter.com/kirtan" target="_blank">twttr</a> <a href="http://foursquare.com/kirtan" target="_blank">dodgeball</a> <a href="http://instagrid.me/kirtan" target="_blank">instagram</a> <a href="http://quora.com/Kirtan-Patel" target="_blank">quora</a> <a href="http://findings.com/kirtan" target="_blank">fndgs</a> <a href="http://pinterest.com/kirtan" target="_blank">pinterest</a> <a href="http://open.spotify.com/user/thekirtan" target="_blank">spotify</a> <a href="http://facebook.com/kirtan" target="_blank">thefacebook</a>
