--- a/ideas/index.html
+++ b/ideas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wf-ffmetaserifwebpro-n5-active wf-ffmetaserifwebpro-i5-active wf-ffmetaserifwebpro-n7-active wf-proximanova-n4-active wf-proximanova-n7-active wf-active"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Test.</title>
+  <title>Free Ideas</title>
   <link rel="stylesheet" href="./files/main.css">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script src="./files/jquery.min.js"></script>
@@ -13,11 +13,11 @@
 
 </nav>
       <article class="art ">
-        <header class="art-header  white" style="background-image: url(http://davegamache.com/public/img/articles/chase-happiness.jpg); background-position: 50% 0px; "> <!-- white -->
+        <header class="art-header  white" style="background-image: url(http://thekirtan.com/img/free.jpg); background-position: 50% 0px; "> <!-- white -->
           <div class="art-header-inner" style="margin-top: 0px; opacity: 1; ">
-            <time class="art-time">August 4, 2012</time>
-            <h2 class="art-title" style="font-size: 98px; ">#roadtrip</h2>
-            <p class="art-subtitle">Flo Rida is from Florida?</p>
+            <time class="art-time">August 18, 2012</time>
+            <h2 class="art-title" style="font-size: 98px; ">Free Ideas</h2>
+            <p class="art-subtitle">People of the future, please make these things.</p>
           </div>
         </header>
         <div class="art-body">
@@ -40,7 +40,7 @@
     &nbsp;
   </div>
   <aside class="offsite-links">
-    <a class="twitter-link" href="http://www.twitter.com/jv_av">Twitter</a>
+    <a class="twitter-link" href="http://www.twitter.com/kirtan">Twitter</a>
   </aside>
 </footer>
     </div>
