--- a/ideas/index.html
+++ b/ideas/index.html
@@ -15,7 +15,7 @@
       <article class="art ">
         <header class="art-header  white" style="background-image: url(http://thekirtan.com/img/free.jpg); background-position: 50% 0px; "> <!-- white -->
           <div class="art-header-inner" style="margin-top: 0px; opacity: 1; ">
-            <time class="art-time">August 18, 2012</time>
+            <time class="art-time">August, 2012</time>
             <h2 class="art-title" style="font-size: 98px; ">Free Ideas</h2>
             <p class="art-subtitle">People of the future, please make these things.</p>
           </div>
