--- a/ideas/index.html
+++ b/ideas/index.html
@@ -13,7 +13,7 @@
 
 </nav>
       <article class="art ">
-        <header class="art-header  white" style="background-image: url(http://thekirtan.com/img/free.jpg); background-position: 50% 0px; "> <!-- white -->
+        <header class="art-header white" style="background-image: url(http://thekirtan.com/img/free.jpg); background-position: 50% 0px; "> <!-- white -->
           <div class="art-header-inner" style="margin-top: 0px; opacity: 1; ">
             <time class="art-time">August, 2012</time>
             <h2 class="art-title" style="font-size: 98px; ">Free Ideas</h2>
@@ -22,27 +22,18 @@
         </header>
         <div class="art-body">
           <div class="art-body-inner">
-            <p><strong>Below is an unedited stream of my thoughts on happiness.</strong> I usually enjoy writing and publishing well-articulated thoughts, but my usual process felt wrong for the subject. Instead of outlining, drafting, writing, editing and proofreading an article about being happy and adventurous, I hammered away in a text document for a half-hour and straight-up pasted the resulting stream of conscious (with a couple line breaks and some bolding of course).</p>
+            <p><strong>Washer / Dryer all-in-one.</strong> This device both washes and dries your clothes. Built-in iOS integration supports on/off commands, scheduling and push notifications.</p>
+            
+            <p><strong>Machine that instantaneously cooks pasta.</strong> Come on, that would be pretty awesome.</p>
+
+            <p><strong>Hey Man!</strong> At a party, you run into a guy who greets you by name. You've met before, but you have no idea who he is. Give him a friendly "Hey, man!" Make small talk, slip away, and fire up the Hey Man! app. Snap a subtle photo of him. The software uses facial recognition software to troll Facebook and Google Image searches to ID him, then compares those results to your contact list, email history, and other crap like LinkedIn. You learn his name, along with key information like how you met, what he does, and whether or not you have a history with his girlfriend.</p>
 
 <ol class="art-reference">
-<li>This is also true for you ladies. Chase the man of your dreams and treat him right.</li>
+<li>This is just some list.</li>
 </ol>
           </div>
         </div>
       </article>
-      <footer class="footer">
-  <div class="back-to-top">
-    <a href="">Back to top</a>
-  </div>
-  <div class="footer-nav">
-
-    
-    &nbsp;
-  </div>
-  <aside class="offsite-links">
-    <a class="twitter-link" href="http://www.twitter.com/kirtan">Twitter</a>
-  </aside>
-</footer>
-    </div>
+        </div>
   
 </body></html>
