--- a/ideas/index.html
+++ b/ideas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wf-ffmetaserifwebpro-n5-active wf-ffmetaserifwebpro-i5-active wf-ffmetaserifwebpro-n7-active wf-proximanova-n4-active wf-proximanova-n7-active wf-active"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Free Ideas</title>
+  <title>Free Ideas!</title>
   <link rel="stylesheet" href="./files/main.css">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script src="./files/jquery.min.js"></script>
