--- a/ideas/index.html
+++ b/ideas/index.html
@@ -28,6 +28,8 @@
 
             <p><strong>Hey Man!</strong> At a party, you run into a guy who greets you by name. You've met before, but you have no idea who he is. Give him a friendly "Hey, man!" Make small talk, slip away, and fire up the Hey Man! app. Snap a subtle photo of him. The software uses facial recognition software to troll Facebook and Google Image searches to ID him, then compares those results to your contact list, email history, and other crap like LinkedIn. You learn his name, along with key information like how you met, what he does, and whether or not you have a history with his girlfriend.</p>
 
+<p><strong>Instagram sunglasses.</strong> ↬ <a href="http://twitter.com/shray890" target="_blank">Shray</a></p>
+
 <ol class="art-reference">
 <li>This is just some list.</li>
 </ol>
