--- a/ideas/index.html
+++ b/ideas/index.html
@@ -22,7 +22,7 @@
         </header>
         <div class="art-body">
           <div class="art-body-inner">
-            <p><strong>Washer / Dryer all-in-one.</strong> This device both washes and dries your clothes. Built-in iOS integration supports on/off commands, scheduling and push notifications.</p>
+            <p><strong>Washer / Dryer all-in-one.</strong> This device both washes and dries your clothes. Built-in iOS integration  ↬ <a href="http://twitter.com/darsakpatel" target="_blank">Darsak</a> supports on/off commands, scheduling and push notifications.</p>
             
             <p><strong>Machine that instantaneously cooks pasta.</strong> Come on, that would be pretty awesome.</p>
 
