--- a/codecademy/index.html
+++ b/codecademy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Cosmos</title>
+  <title>Codecademy Fellowship</title>
 
   <link rel="stylesheet" type="text/css" href="./files/33fd4a2bb58aa07bd0b9478ab12a5928.css">
 
