--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <pre>
   <p><a href="http://twitter.com/kirtan" target="_blank">twttr</a> <a href="http://kirtan.tumblr.com" target="_blank">tumblr</a> <a href="http://instagrid.me/kirtan" target="_blank">burbn</a> <a href="http://foursquare.com/kirtan" target="_blank">dodgeball</a> <a href="http://quora.com/Kirtan-Patel" target="_blank">quora</a> <a href="http://stellar.io/kirtan" target="_blank">stellar</a> <a href="http://github.com/kirtan" target="_blank">github</a> <a href="http://open.spotify.com/user/thekirtan" target="_blank">spotify</a> <a href="http://facebook.com/kirtan" target="_blank">thefacebook</a>
   
-  <a href="mailto:me@thekirtan.com">email</a> <span>&middot;</span> <a href="http://www.linkedin.com/in/thekirtan" target="_blank">linkedin</a> <span>&middot;</span> <a href="http://angel.co/kirtan">angellist</a> <span>&middot;</span> <a href="http://dl.dropbox.com/u/460310/Kirtan_Patel.pdf">résumé</a></p>
+  <a href="mailto:me@thekirtan.com">email</a> <span>&middot;</span> <a href="http://www.linkedin.com/in/thekirtan" target="_blank">linkedin</a> <span>&middot;</span> <a href="http://angel.co/kirtan">angellist</a> <span>&middot;</span></p>
 </pre>
 
 </body><link rel="stylesheet" type="text/css" href="data:text/css,"></html>
