--- a/kamal/index.html
+++ b/kamal/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Kamal's Excuses.</title>
+		<title>Kamal's Excuses</title>
 		</head>
 		<style>
 body {
@@ -27,7 +27,7 @@ h1 {
 		<p>I am locked inside.</p>
 		<p>I'm stuck in the door.</p>
 		<p>I have to pick on my sister.</p>
-		<p>I have to help my baa bake cookies.</p>
+		<p>I have to help my baa bake some crap.</p>
 		<p>My baa is graduating from high school and I’d like to go to the ceremony.</p>
 		<p>My mom is receiving a Nobel Prize and I’d like to go to the ceremony.</p>
 		<p>My dog has a rash all over, and the vet closes early today.</p>
