added some startups and shit

--- a/things/index.html
+++ b/things/index.html
@@ -24,33 +24,27 @@ h1 {
 	authentic organic simple trustworthy honest industrial straightforward <br> real gentlemanly scientific valuable tangible lasting long prosperous <br> ↬ <a href="http://slowventures.com" target="_blank">Slow Ventures</a>
 	
 		<h1>Things I want to see:</h1>
+		
+		<p> <a href="http://upthere.com" target="_blank">upthere</a></p>
 		<p> <a href="http://vdio.com" target="_blank">VDIO</a></p>
-		<p> <a href="http://gorackit.com" target="_blank">Rackit</a></p>
-		<p> <a href="http://parachutes.org" target="_blank">Parachutes</a></p>
-		<p> <a href="http://don.na" target="_blank">Donna</a></p>
 		<p> <a href="http://deepmind.com/" target="_blank">DeepMind Technologies</a></p>
 		<p> <a href="http://presenceinc.com" target="_blank">Presence</a></p>
-		<p> <a href="http://upthere.com" target="_blank">upthere</a></p>
 		<p> <a href="http://integratedplasmonics.com" target="_blank">Integrated Plasmonics Corporation</a></p>
 		<p> <a href="http://quakelabs.com" target="_blank">Quake Labs</a></p>
-		<p> <a href="http://www.simpler.co" target="_blank">Simpler</a></p>
 		<p> <a href="http://tempo.ai" target="_blank">Tempo AI</a></p>
 		<p> <a href="http://blendlabsinc.com" target="_blank">Blend Labs</a></p>
-		<p> <a href="http://herelabs.com" target="_blank">HereLabs</a></p>
 		<p> <a href="http://parlaylabs.com" target="_blank">Parlay Labs</a></p>
-		<p> <a href="http://messageme.com" target="_blank">MessageMe</a></p>
 
-		
 		<h1>Things I've seen and like:</h1>
-		<p> <a href="http://bubbli.co" target="_blank">Bubbli</a></p>
+
+		<p> <a href="http://human.co" target="_blank">Human</a></p>
+		<p> <a href="http://www.simpler.co" target="_blank">Simpler</a></p>
+		<p> <a href="http://messageme.com" target="_blank">MessageMe</a></p>
+		<p> <a href="http://don.na" target="_blank">Donna</a></p>
+		<p> <a href="http://gorackit.com" target="_blank">Rackit</a></p>
 		<p> <a href="http://scanadu.com" target="_blank">Scanadu</a></p>
-		<p> <a href="http://picturelife.com" target="_blank">Picturelife</a></p>
-		<p> <a href="http://bondsy.com" target="_blank">Bondsy</a></p>
-		<p> <a href="http://simple.com" target="_blank">Simple Finance Technology Corp.</a></p>
-		<p> <a href="http://swirl.us" target="_blank">Swirl</a></p>
-		<p> <a href="http://lift.do" target="_blank">Lift</a></p>
-		<p> <a href="http://nudgepad.com" target="_blank">Nudge</a></p>
-		<p> <a href="http://brewster.com" target="_blank">Brewster</a></p>
+		<p> <a href="http://parachutes.org" target="_blank">Parachutes</a></p>
+		<p> <a href="http://herelabs.com" target="_blank">HereLabs</a></p>
 		
 		<h1></h1>
 		
