--- a/things/index.html
+++ b/things/index.html
@@ -34,6 +34,7 @@ h1 {
 		<p> <a href="http://tempo.ai" target="_blank">Tempo AI</a></p>
 		<p> <a href="http://blendlabsinc.com" target="_blank">Blend Labs</a></p>
 		<p> <a href="http://www.parlaylabs.com" target="_blank">Parlay Labs</a></p>
+		<p> <a href="http://tapedeck.com" target="_blank">Tapedeck</a></p>
 
 		<h1>Things I've seen and like:</h1>
 
