--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <title>Hello</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Kirtan Patel</title>
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="./files/style.css">
 
-    <link rel="stylesheet" href="./files/style.css" type="text/css">
+</head><style type="text/css"></style>
+<body>
+  <div class="container">
+    <div class="content">
+      <div class="block">
+        <address>
+          <a href="http://twitter.com/kirtan">@kirtan</a>
+        </address>
+        <address>
+          <a href="http://instagr.am/kirtan">⧈kirtan</a>
+        </address>
+      </div>
+      <div class="block">
+        <div class="copy">
+          © 2012. All rights reserved.
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <h1>kirtan patel</h1>
-    <h2></h2>
-    <pre>
-  <p><a href="http://twitter.com/kirtan" target="_blank">twttr</a> <a href="http://kirtan.tumblr.com" target="_blank">tumblr</a> <a href="http://instagram.com/kirtan" target="_blank">burbn</a> <a href="http://foursquare.com/kirtan" target="_blank">dodgeball</a> <a href="http://quora.com/Kirtan-Patel" target="_blank">quora</a> <a href="http://stellar.io/kirtan" target="_blank">stellar</a> <a href="http://github.com/kirtan" target="_blank">github</a> <a href="http://open.spotify.com/user/thekirtan" target="_blank">spotify</a> <a href="http://facebook.com/kirtan" target="_blank">thefacebook</a>
-  
-  <a href="mailto:me@thekirtan.com">email</a> <span>&middot;</span> <a href="http://www.linkedin.com/in/thekirtan" target="_blank">linkedin</a> <span>&middot;</span> <a href="http://angel.co/kirtan">angellist</a></p>
-</pre>
-
-</body><link rel="stylesheet" type="text/css" href="data:text/css,"></html>
+</body></html>
