--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Kirtan Patel</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="./files/style.css">
+  <link rel="stylesheet" href="./sitefiles/style.css">
 
 </head><style type="text/css"></style>
 <body>
