--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="http://twitter.com/kirtan">@kirtan</a>
         </address>
         <address>
-          <a href="http://instagr.am/kirtan">⧇kirtan</a>
+          <a href="http://instagr.am/kirtan">▣kirtan</a>
         </address>
       </div>
       <div class="block">
