--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Kirtan Patel</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="./sitefiles/style.css">
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="/sitefiles/favicon.ico" />
 
 </head><style type="text/css"></style>
 <body>
