--- a/focusmedia/team/index.html
+++ b/focusmedia/team/index.html
@@ -37,7 +37,7 @@
         		<li class="clearfix">
         			<img src="./files/akash.jpg" class="face">
         		  <h2>Akash Patel - CTO</h2>
-        			<p>Akash held strategy roles at Shayona and some deli and advised companies such as "that harmonium company" and Taco Bell. He also, invented the very popular command "F12" which solves every technology problem you will ever have<a href="http://twitter.com/AkashDirk41">Twitter</a></p>
+        			<p>Akash held strategy roles at Shayona and some deli and advised companies such as "that harmonium company" and Taco Bell. He also, invented the very popular command "F12" which solves every technology problem you will ever have.<a href="http://twitter.com/AkashDirk41">Twitter</a></p>
         		</li>
                 
                 <li class="clearfix">
