--- a/focusmedia/team/index.html
+++ b/focusmedia/team/index.html
@@ -43,7 +43,7 @@
                 <li class="clearfix">
         			<img src="./files/money.jpg" class="face">
         		  <h2>Anirudh "Moneyrudh" Rao - CFO</h2>
-        			<p>Anirudh is Chairman and Co-Founder and Chief Engineer of YouTube and a manager of a liquor store. He is also a member of Moneyrudh Group LLC, and Chairman of Instagram.
+        			<p>Anirudh is Chairman and Co-Founder and Chief Engineer of YouTube and a manager of a liquor store. He is also a member of Moneyrudh Group LLC, and Chairman of Twitter. Oh swerve.
         <a href="http://twitter.com/moneyrudh">FOLLOW ME BITCHES</a>
         </p>
         		</li>
