--- a/focusmedia/team/index.html
+++ b/focusmedia/team/index.html
@@ -23,7 +23,7 @@
         		<li class="clearfix">
         			<img src="./files/nikin.jpg" class="face">
         		  <h2>Nikin Patel - Founder &amp; CEO</h2>
-        			<p>Prior to launching Focus Media, Nikin was CEO of Apple.   Before Focus Media Nikin was SVP of Technology and Alliances at some hospital. <a href="http://envisionnow.org">his "website"</a></p>
+        			<p>Prior to launching Focus Media, Nikin was CEO of Apple. Before Apple, Nikin was SVP of Technology and Alliances at some hospital. <a href="http://envisionnow.org">his "website"</a></p>
         		</li>
 
         	  <li class="clearfix">
