--- a/focusmedia/team/index.html
+++ b/focusmedia/team/index.html
@@ -64,6 +64,7 @@
                     <h1>Investors</h1>
                     <ul>
                         <li><a href="http://dpdigitalmedia.com" class="red_link">Darsak</a></li>
+                        <li><a href="http://bloomberg.com" class="red_link">Darshak</a></li>
                         <li><a href="http://twitter.com/topiwalaful" class="red_link">Topiwala (Sure)</a></li>
 
                     </ul>
