--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <address>
           <a href="http://twitter.com/kirtan">@kirtan</a>
         </address>
+		<address>
+	      <a href="http://medium.com/@kirtan">✎kirtan</a>
+	    </address>
         <address>
-          <a href="http://instagr.am/kirtan">▣kirtan</a>
+          <a href="http://instagram.com/kirtan">▣kirtan</a>
         </address>
       </div>
       <div class="block">
