--- a/mm12/index.html
+++ b/mm12/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link rel='shortcut icon' href='http://thekirtan.com/mm12/favicon.ico' />
   </head>
   <body>
     <div class="wrapper">
