--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="http://twitter.com/kirtan">@kirtan</a>
         </address>
 		<address>
-	      <a href="http://medium.com/@kirtan">✎kirtan</a>
+	      <a href="http://kirtan.tumblr.com">✎kirtan</a>
 	    </address>
         <address>
           <a href="http://instagram.com/kirtan">▣kirtan</a>
