--- a/things/index.html
+++ b/things/index.html
@@ -26,26 +26,36 @@ h1 {
 		<h1>Things I want to see:</h1>
 		
 		<p> <a href="http://upthere.com" target="_blank">upthere</a></p>
-		<p> <a href="http://vdio.com" target="_blank">VDIO</a></p>
 		<p> <a href="http://deepmind.com/" target="_blank">DeepMind Technologies</a></p>
 		<p> <a href="http://presenceinc.com" target="_blank">Presence</a></p>
-		<p> <a href="http://integratedplasmonics.com" target="_blank">Integrated Plasmonics Corporation</a></p>
 		<p> <a href="http://quakelabs.com" target="_blank">Quake Labs</a></p>
 		<p> <a href="http://tempo.ai" target="_blank">Tempo AI</a></p>
 		<p> <a href="http://blendlabsinc.com" target="_blank">Blend Labs</a></p>
 		<p> <a href="http://www.parlaylabs.com" target="_blank">Parlay Labs</a></p>
-		<p> <a href="http://tapedeck.com" target="_blank">Tapedeck</a></p>
+		<p> <a href="http://www.redhotlabs.com/" target="_blank">Red Hot Labs</a></p>
+		<p> <a href="http://heligram.com" target="_blank">Heligram</a></p>
+		<p> <a href="http://lookflow.com" target="_blank">LookFlow</a></p>
+		<p> <a href="http://mkiiventures.com" target="_blank">Phonely</a></p>
+		<p> <a href="http://tugboatyards.com" target="_blank">TugBoat</a></p>
+		<p> <a href="http://origin.al" target="_blank">Original</a></p>
+		<p> <a href="http://concept.io" target="_blank">Concept.io</a></p>	
+		<p> <a href="http://don.na" target="_blank">Donna</a></p>
+		<p> <a href="http://parachutes.org" target="_blank">Parachutes</a></p>
+		<p> <a href="http://herelabs.com" target="_blank">HereLabs</a></p>
+		<p> <a href="http://www.simpler.co" target="_blank">Simpler</a></p>
 
 		<h1>Things I've seen and like:</h1>
 
+		<p> <a href="http://mailboxapp.com" target="_blank">Mailbox</a></p>
 		<p> <a href="http://human.co" target="_blank">Human</a></p>
-		<p> <a href="http://www.simpler.co" target="_blank">Simpler</a></p>
+		<p> <a href="http://bondsy.com" target="_blank">Bondsy</a></p>
+		<p> <a href="http://editorially.com" target="_blank">Editorially</a></p>
+		<p> <a href="http://seesaw.co" target="_blank">Seesaw</a></p>
+		<p> <a href="http://tobe.us" target="_blank">ToBe</a></p>
+		<p> <a href="http://ibid.io" target="_blank">Ibid</a></p>
 		<p> <a href="http://messageme.com" target="_blank">MessageMe</a></p>
-		<p> <a href="http://don.na" target="_blank">Donna</a></p>
 		<p> <a href="http://gorackit.com" target="_blank">Rackit</a></p>
 		<p> <a href="http://scanadu.com" target="_blank">Scanadu</a></p>
-		<p> <a href="http://parachutes.org" target="_blank">Parachutes</a></p>
-		<p> <a href="http://herelabs.com" target="_blank">HereLabs</a></p>
 		
 		<h1></h1>
 		
