--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="block">
         <div class="copy">
 
-          © 2013. All rights reserved.
+          © 2013. No rights reserved.
         </div>
       </div>
     </div>
