--- a/meera/index.html
+++ b/meera/index.html
@@ -11,7 +11,7 @@
 
 </nav>
       <article class="art ">
-        <header class="art-header white" style="background-image: url(http://thekirtan.com/img/meera.jpg); background-position: 50% 0px; "> <!-- white -->
+        <header class="art-header white" style="background-image: url(http://thekirtan.com/img/meera_s.jpg); background-position: 50% 0px; "> <!-- white -->
           <div class="art-header-inner" style="margin-top: 0px; opacity: 1; ">
             <time class="art-time">Febuary, 2013</time>
             <h2 class="art-title" style="font-size: 98px; ">Meera Patel</h2>
