--- a/meera/index.html
+++ b/meera/index.html
@@ -15,7 +15,7 @@
           <div class="art-header-inner" style="margin-top: 0px; opacity: 1; ">
             <time class="art-time">Febuary, 2013</time>
             <h2 class="art-title" style="font-size: 98px; ">Meera Patel</h2>
-            <p class="art-subtitle">Life & Work</p>
+            <p class="art-subtitle">Life & Work.</p>
           </div>
         </header>
         <div class="art-body">
