--- a/meera/index.html
+++ b/meera/index.html
@@ -25,7 +25,7 @@
           
 <ol class="art-reference">
 <li>No, there is no SparkNotes for this.</li>
-<li>Please send all marriage proposals to meera@thekirtan.com | Thank you.</li>
+<li>Please send all marriage proposals to meera@fera.na.baps.org | Thank you.</li>
 </ol>
           </div>
         </div>
