--- a/oyster/index.html
+++ b/oyster/index.html
@@ -13,7 +13,7 @@
 
 </nav>
       <article class="art ">
-        <header class="art-header white" style="background-image: url(http://thekirtan.com/img/header.jpg); background-position: 50% 0px; "> <!-- white -->
+        <header class="art-header white" style="background-image: url(http://thekirtan.com/files/header.jpg); background-position: 50% 0px; "> <!-- white -->
           <div class="art-header-inner" style="margin-top: 0px; opacity: 1; ">
             <time class="art-time">August, 2012</time>
             <h2 class="art-title" style="font-size: 98px; ">Free Ideas</h2>
