--- a/oyster/index.html
+++ b/oyster/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wf-ffmetaserifwebpro-n5-active wf-ffmetaserifwebpro-i5-active wf-ffmetaserifwebpro-n7-active wf-proximanova-n4-active wf-proximanova-n7-active wf-active"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Free Ideas!</title>
+  <title>Hire Kirtan!</title>
   <link rel="stylesheet" href="./files/main.css">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script src="./files/jquery.min.js"></script>
@@ -15,23 +15,21 @@
       <article class="art ">
         <header class="art-header white" style="background-image: url(http://thekirtan.com/files/header.jpg); background-position: 50% 0px; "> <!-- white -->
           <div class="art-header-inner" style="margin-top: 0px; opacity: 1; ">
-            <time class="art-time">August, 2012</time>
-            <h2 class="art-title" style="font-size: 98px; ">Free Ideas</h2>
-            <p class="art-subtitle">People of the future, please make these things.</p>
+            <time class="art-time"></time>
+            <h2 class="art-title" style="font-size: 98px; "></h2>
+            <p class="art-subtitle"></p>
           </div>
         </header>
         <div class="art-body">
           <div class="art-body-inner">
-            <p><strong>Washer / Dryer all-in-one.</strong> This device both washes and dries your clothes. Built-in iOS integration (↬ <a href="http://twitter.com/darsakpatel" target="_blank">Darsak</a>) supports on/off commands, scheduling and push notifications.</p>
+            <p><strong>Hey!</strong> Love what you guys are working on and </p>
+
+<p>Would love to <a href="mailto:me@thekirtan.com" target="_blank">talk</a> more!</p>
             
-            <p><strong>Machine that instantaneously cooks pasta.</strong> Come on, that would be pretty awesome.</p>
-
-            <p><strong>Hey Man!</strong> At a party, you run into a guy who greets you by name. You've met before, but you have no idea who he is. Give him a friendly "Hey, man!" Make small talk, slip away, and fire up the Hey Man! app. Snap a subtle photo of him. The software uses facial recognition software to troll Facebook and Google Image searches to ID him, then compares those results to your contact list, email history, and other crap like LinkedIn. You learn his name, along with key information like how you met, what he does, and whether or not you have a history with his girlfriend.</p>
-
-<p><strong>Instagram sunglasses.</strong> ↬ <a href="http://twitter.com/shray890" target="_blank">Shray</a></p>
+          
 
 <ol class="art-reference">
-<li>This is just some list.</li>
+<li>Résumé <a href="https://dl.dropbox.com/u/460310/Kirtan-Patel.pdf" target="_blank">here</a>.</li>
 </ol>
           </div>
         </div>
