--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	      <a href="http://kirtan.tumblr.com">✎kirtan</a>
 	    </address>
         <address>
-          <a href="http://instagram.com/kirtan">▣kirtan</a>
+          <a href="http://instagr.am/kirtan">▣kirtan</a>
         </address>
       </div>
       <div class="block">
