--- a/oyster/index.html
+++ b/oyster/index.html
@@ -22,9 +22,12 @@
         </header>
         <div class="art-body">
           <div class="art-body-inner">
-            <p><strong>Hey!</strong> Love what you guys are working on and </p>
 
-<p>Would love to <a href="mailto:me@thekirtan.com" target="_blank">talk</a> more!</p>
+            <p><strong>Hey!</strong> My name is Kirtan and I've been bouncing around the NY tech scene for the better part of around 4 years.<sup>1</sup> This summer, I'm looking to join a company where I can truly foster these skills. This search has led me to you. Coupling my experience from a few startups and a seed fund, I believe that Oyster would be a perfect fit. I love the idea of being on a small team with an awesome product and lots of room to grow and learn.</p>
+
+<p><strong>But above all</strong>, I <a href="https://www.readability.com/kirtan/" target="_blank">love</a> reading. What began as a simple hobby when I was a child has matured into something that I cannot see myself living without. I believe that there is still a huge calling for a beautiful reading/discovery experience on the devices that millions of people carry around in their pockets everyday. This is what gets me so excited about Oyster. The chance to change how people spend hours of their time. It's an incredibly enormous challenge, but it's one I'm ready to dive right into.</p>
+
+<p>Would love to <a href="mailto:me@thekirtan.com" target="_blank">chat</a> more!</p>
             
           
 
