--- a/breather/index.html
+++ b/breather/index.html
@@ -13,7 +13,7 @@
 
 </nav>
       <article class="art ">
-        <header class="art-header white" style="background-image: url(http://thekirtan.com/files/breather.jpg); background-position: 50% 0px; "> <!-- white -->
+        <header class="art-header white" style="background-image: url(http://thekirtan.com/files/breather_head.jpg); background-position: 50% 0px; "> <!-- white -->
           <div class="art-header-inner" style="margin-top: 0px; opacity: 1; ">
             <time class="art-time"></time>
             <h2 class="art-title" style="font-size: 98px; "></h2>
@@ -23,9 +23,9 @@
         <div class="art-body">
           <div class="art-body-inner">
 
-            <p><strong>Hey!</strong> My name is Kirtan and I've been bouncing around the NY tech scene for the better part of around 4 years.<sup>1</sup> This summer, I'm looking to join a company where I can truly foster these skills. This search has led me to you. Coupling my experience from a few startups and a seed fund, I believe that Oyster would be a perfect fit. I love the idea of being on a small team with an awesome product and lots of room to grow and learn.</p>
+            <p><strong>Hey!</strong> My name is Kirtan and I've been bouncing around the NY tech scene for the better part of around 4 years.<sup>1</sup> This summer, I'm looking to join a company where I can truly foster these skills. This search has led me to you. Coupling my experience from a few startups and a seed fund, I believe that Breather would be a perfect fit. I love the idea of being on a small team with an awesome product and lots of room to grow and learn.</p>
 
-<p><strong>But above all</strong>, I <a href="https://www.readability.com/kirtan/" target="_blank">love</a> reading. What began as a simple hobby when I was a child has matured into something that I cannot see myself living without. I believe that there is still a huge calling for a beautiful reading/discovery experience on the devices that millions of people carry around in their pockets everyday. This is what gets me so excited about Oyster. The chance to change how people spend hours of their time. It's an incredibly enormous challenge, but it's one I'm ready to dive right into.</p>
+<p><strong>But above all</strong>, I love the idea behind Breather. I believe that there is still a huge need for a easy way for people to book space in new places in real-time. This is what gets me so excited about Breather. The chance to make it insanely easy for people book an amazing space to relax and work is very exciting. It's an incredibly enormous challenge, but it's one I'm ready to dive right into.</p>
 
 <p>Would love to <a href="mailto:me@thekirtan.com" target="_blank">chat</a> more!</p>
             
