--- a/breather/index.html
+++ b/breather/index.html
@@ -23,9 +23,9 @@
         <div class="art-body">
           <div class="art-body-inner">
 
-            <p><strong>Hey!</strong> My name is Kirtan and I've been bouncing around the NY tech scene for the better part of around 4 years.<sup>1</sup> This summer, I'm looking to join a company where I can truly foster these skills. This search has led me to you. Coupling my experience from a few startups and a seed fund, I believe that Breather would be a perfect fit. I love the idea of being on a small team with an awesome product and lots of room to grow and learn.</p>
+            <p><strong>Hey!</strong> My name is Kirtan and I've been bouncing around the NY tech scene for the better part of around 4 years.<sup>1</sup> This summer, I'm looking to join a company where I can truly foster these skills. This search has led me to you. Coupling my experience from a few startups and a seed fund, I believe that Breather would be the perfect fit. I love the idea of being on a small team with an awesome product and lots of room to grow and learn.</p>
 
-<p><strong>But above all</strong>, I love the idea behind Breather. I believe that there is still a huge need for a easy way for people to book space in new places in real-time. This is what gets me so excited about Breather. The chance to make it insanely easy for people book an amazing space to relax and work is very exciting. It's an incredibly enormous challenge, but it's one I'm ready to dive right into.</p>
+<p><strong>But above all</strong>, I love the idea behind Breather. I believe that there is still a huge need for a easy way for people to book space in new cities in real-time. This is what gets me so excited about Breather. The chance to make it insanely easy for people book an amazing space to relax and work is very exciting. It's an incredibly enormous challenge, but it's one I'm ready to dive right into.</p>
 
 <p>Would love to <a href="mailto:me@thekirtan.com" target="_blank">chat</a> more!</p>
             
