--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Kirtan Patel</title>
   <meta name="viewport" content="width=device-width">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@kirtan">
-<meta name="twitter:title" content="Hello.">
-<meta name="twitter:description" content="Now leave.">
-<meta name="twitter:image:src" content="http://placekitten.com/250/250">
+<meta property="twitter:account_id" content="14577999" />
   <link rel="stylesheet" href="./sitefiles/style.css">
   <link rel="shortcut icon" href="/sitefiles/favicon.ico"/>
 
