--- a/breather/index.html
+++ b/breather/index.html
@@ -32,7 +32,7 @@
           
 
 <ol class="art-reference">
-<li>Résumé <a href="https://dl.dropbox.com/u/460310/Kirtan-Patel.pdf" target="_blank">here</a>.</li>
+<li>Résumé <a href="https://dl.dropboxusercontent.com/u/460310/Kirtan_CV.pdf" target="_blank">here</a>.</li>
 </ol>
           </div>
         </div>
