--- a/nc13/index.html
+++ b/nc13/index.html
@@ -24,26 +24,8 @@
       </div>
 
       <div class="social">
-        <a class="visit" href="http://lore.com">Visit Lore</a>
-        <div class="beneath">
-          <div class="left">
-            <a href="http://github.com" class="section github">
-                <div class="flag">Github<div class="arrow"></div></div>
-                <div class="link">Fork This</div>
-            </a>
-            <a href="http://design.lore.com/identity" class="section design">
-                <div class="flag">Design Process<div class="arrow"></div></div>
-                <div class="link">About the Logo</div>
-            </a> 
-          </div>
-          <div class="right">
-            <a href="http://twitter.com/learn" class="section twitter">
-                <div class="flag">@learn<div class="arrow"></div></div>
-                <div class="twitter-icon icon"></div>
-            </a>
-            <a href="http://lore.com/jobs" class="section jobs">
-                <div class="flag">Lore is hiring<div class="arrow"></div></div>
-                <div class="link">Join us!</div>
+        <a class="visit" href="http://baps.org">Relive the Memories</a>
+
             </a>
           </div>
         </div>
