--- a/nc13/index.html
+++ b/nc13/index.html
@@ -24,7 +24,8 @@
       </div>
 
       <div class="social">
-        <a class="visit" href="http://baps.org">Relive the Memories</a>
+        <a class="visit" href="http://baps.or">Relive the Memories</a>
+        <div class="beneath">
 
             </a>
           </div>
