--- a/art/todo/index.html
+++ b/art/todo/index.html
@@ -26,7 +26,8 @@ h1 {
 		<p><a href="http://www.madisonsquarepark.org/things-to-do/calendar/mad-sq-art-orly-genger" target="_blank"><strike>Orly Genger - Red, Yellow and Blue</a></strike></p>
 		<p><a href="http://www.moma.org/visit/calendar/exhibitions/1380" target="_blank">Random International - Rain Room</a></p>
 		<p><a href="http://www.discoverytsx.com/exhibitions/art-of-the-brick" target="_blank">Nathan Sawaya - The Art of the Brick</a></p>
-		<p><a href="http://mmuseumm.com" target="_blank">Museum - The World's Smallest Museum</a></p>
+		<p><a href="http://mmuseumm.com" target="_blank"><strike>Museum - The World's Smallest Museum</a></strike></p>
+		<p><a href="http://www.juddfoundation.org" target="_blank">Donald Judd - 101 Spring St.</a></p>
 		<h1></h1>
 		
 </body></html>
