--- a/art/todo/index.html
+++ b/art/todo/index.html
@@ -28,6 +28,7 @@ h1 {
 		<p><a href="http://www.discoverytsx.com/exhibitions/art-of-the-brick" target="_blank">Nathan Sawaya - The Art of the Brick</a></p>
 		<p><a href="http://mmuseumm.com" target="_blank"><strike>Museum - The World's Smallest Museum</a></strike></p>
 		<p><a href="http://www.juddfoundation.org" target="_blank">Donald Judd - 101 Spring St.</a></p>
+		<p><a href="http://www.guggenheim.org/new-york/exhibitions/on-view/james-turrell" target="_blank">James Turrell - Guggenheim</a></p>
 		<h1></h1>
 		
 </body></html>
