--- a/art/todo/index.html
+++ b/art/todo/index.html
@@ -22,7 +22,7 @@ h1 {
 	</head>
 		<h1></h1>
 	
-		<h1>Art that I'll actually understand.</h1>
+		<h1>Art that I'll hopefully understand.</h1>
 		<p><a href="http://www.madisonsquarepark.org/things-to-do/calendar/mad-sq-art-orly-genger" target="_blank"><strike>Orly Genger - Red, Yellow and Blue</a></strike></p>
 		<p><a href="http://www.moma.org/visit/calendar/exhibitions/1380" target="_blank"><strike>Random International - Rain Room</a></strike></p>
 		<p><a href="http://www.discoverytsx.com/exhibitions/art-of-the-brick" target="_blank">Nathan Sawaya - The Art of the Brick</a></p>
