--- a/art/todo/index.html
+++ b/art/todo/index.html
@@ -30,7 +30,7 @@ h1 {
 		<p><a href="http://www.juddfoundation.org" target="_blank">Donald Judd - 101 Spring St.</a></p>
 		<p><a href="http://www.guggenheim.org/new-york/exhibitions/on-view/james-turrell" target="_blank"><strike>James Turrell - Guggenheim</a></strike></p>
 		<p><a href="http://www.diaart.org/sites/main/earthroom" target="_blank">Walter De Maria - Earth Room</a></p>
-		<p><a href="http://home.nyc.gov/html/dot/summerstreets/html/route/art-performance.shtml" target="_blank"><strike>Voice Tunnel - Rafael Lozano-Hemmer</a></strike></p>
+		<p><a href="http://home.nyc.gov/html/dot/summerstreets/html/route/art-performance.shtml" target="_blank"><strike>Rafael Lozano-Hemmer - Voice Tunnel</a></strike></p>
 		<h1></h1>
 		
 </body></html>
