--- a/art/todo/index.html
+++ b/art/todo/index.html
@@ -23,6 +23,7 @@ h1 {
 		<h1></h1>
 	
 		<h1>Art that I'll hopefully understand.</h1>
+		p><a href="http://www.armoryonpark.org/programs_events/detail/ann_hamilton/" target="_blank"><strike>Anne Hamilton - The Event of a Thread</a></strike></p>
 		<p><a href="http://www.madisonsquarepark.org/things-to-do/calendar/mad-sq-art-orly-genger" target="_blank"><strike>Orly Genger - Red, Yellow and Blue</a></strike></p>
 		<p><a href="http://www.moma.org/visit/calendar/exhibitions/1380" target="_blank"><strike>Random International - Rain Room</a></strike></p>
 		<p><a href="http://www.discoverytsx.com/exhibitions/art-of-the-brick" target="_blank">Nathan Sawaya - The Art of the Brick</a></p>
