--- a/art/todo/index.html
+++ b/art/todo/index.html
@@ -32,6 +32,7 @@ h1 {
 		<p><a href="http://www.guggenheim.org/new-york/exhibitions/on-view/james-turrell" target="_blank"><strike>James Turrell - Guggenheim</a></strike></p>
 		<p><a href="http://www.diaart.org/sites/main/earthroom" target="_blank">Walter De Maria - Earth Room</a></p>
 		<p><a href="http://home.nyc.gov/html/dot/summerstreets/html/route/art-performance.shtml" target="_blank"><strike>Rafael Lozano-Hemmer - Voice Tunnel</a></strike></p>
+		<p><a href="http://www.moma.org/visit/calendar/exhibitions/1379" target="_blank">MoMA - Soundings: A Contemporary Score</a></p>
 		<h1></h1>
 		
 </body></html>
