--- a/art/index.html
+++ b/art/index.html
@@ -37,6 +37,8 @@ h1 {
 		<p><a href="http://www.projectdarshan.com" target="_blank">The Darshan Project - Manjari Sharma</a> (Backed on <a href="http://www.kickstarter.com/projects/637783296/darshan-photographic-series-on-indian-deities" target="_blank">Kickstarter</a>!)</p>
 		<p><a href="http://gettystation.com" target="_blank"><strike>Getty Station - The Sheep Station</a></strike></p>
 		<p><a href="http://www.friedmanbenda.com/current/" target="_blank">Fried Manbenda - Paul Cocksedge: CAPTURE</a></p>
+		<p><a href="http://whitney.org/Exhibitions/TJWilcox" target="_blank">T. J. Wilcox - In the Air</a></p>
+		<p><a href="http://www.newmuseum.org/exhibitions/view/chris-burden-extreme-measures" target="_blank">Chris Burden - Extreme Measures</a></p>
 		<h1></h1>
 		
 </body></html>
