--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ h1 {
 		</style>
 	</head>
 		<h1>Wrong.</h1>
-		<p>Go Back to <a href="http://thekirtan.com" target="_blank">Start</a>, Do Not Pass Go.</p>
+		<p>Go Back to <a href="http://thekirtan.com">Start</a>, Do Not Pass Go.</p>
 </body></html>
