--- a/focusmedia/index.html
+++ b/focusmedia/index.html
@@ -13,6 +13,6 @@
 <div align="center"><img src="img/blur.jpg" alt="wow" width="1192" height="814">
 </div>
 
-
+<div align="center"><a href="http://thekirtan.com/focusmedia/team">Team</a>
 
 <img id="hzDownscaled" style="position: absolute; top: -10000px;"><img id="hzDownscaled" style="position: absolute; top: -10000px;"></body><style type="text/css"></style></html>
