--- a/art/index.html
+++ b/art/index.html
@@ -39,6 +39,7 @@ h1 {
 		<p><a href="http://www.friedmanbenda.com/current/" target="_blank">Fried Manbenda - Paul Cocksedge: CAPTURE</a></p>
 		<p><a href="http://whitney.org/Exhibitions/TJWilcox" target="_blank">T. J. Wilcox - In the Air</a></p>
 		<p><a href="http://www.newmuseum.org/exhibitions/view/chris-burden-extreme-measures" target="_blank">Chris Burden - Extreme Measures</a></p>
+		<p><a href="http://www.davidzwirner.com/exhibition/yayoi-kusama-9/" target="_blank">Yayoi Kusama - I Who Have Arrived In Heaven</a></p>
 		<h1></h1>
 		
 </body></html>
